[package]
name = "lockup"
version = "0.3.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "lockup"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { path = "../../../../../../lang" }
anchor-spl = { path = "../../../../../../spl" }
solana-program = "1.7.1"
#anchor-lang = "0.4.4"
#anchor-spl = "0.4.4"
