[package]
name = "registry"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "registry"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.4.1"
anchor-spl = "0.4.1"
lockup = { path = "../lockup", features = ["cpi"] }
