[package]
name = "registry"
version = "0.3.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "registry"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { path = "/home/armaniferrante/Documents/code/src/github.com/project-serum/anchor/lang" }
anchor-spl = { path = "/home/armaniferrante/Documents/code/src/github.com/project-serum/anchor/spl" }
#anchor-lang = "0.4.4"
#anchor-spl = "0.4.4"
lockup = { path = "../lockup", features = ["cpi"] }
solana-program = "1.7.1"
